# journal-bot

./: .env.docker.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  bot.py  conversation.py  database.py  docker-compose.local.yml  docker-compose.yml  entrypoint.js  eva-journal-bot  google_drive.py  models.py  pyproject.toml  reflection-questions.txt  tasks.py  utils.py
nginx/: Dockerfile
